--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Mannoj Kumar weds Surya Lakshmi</title>
+	<title>Dinesh Raja weds Monisha</title>
 	<meta name="robots" content="noindex, nofollow" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<meta property="og:title" content="Surya Lakshmi Weds Mannoj Kumar" />
+	<meta property="og:title" content="Monisha Weds Dinesh Raja" />
 	<meta property="og:description" content="vhall.live" />
 	<meta property="og:url" content="" />
 	<meta property="og:image"  content="" />
@@ -88,9 +88,9 @@
 					<div class="container">
 						<div class="col-md-10 col-md-offset-1">
 							<div class="animate-box svg-sm colored">
-								<h1 class="holder"><span>The Engagement of</span></h1>
-								<h2>Mannoj Kumar &amp; Surya Lakshmi</h2>
-								<p>26.10.2020</p>
+								<h1 class="holder"><span>The Betrothal of</span></h1>
+								<h2>Dinesh Raja &amp; Monisha</h2>
+								<p>12.11.2020</p>
 							</div>
 						</div>
 					</div>
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="qbootstrap-groom-bride" data-section="groom-bride">
+	<!-- <div id="qbootstrap-groom-bride" data-section="groom-bride">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
@@ -113,7 +113,7 @@
 					<div class="couple groom text-center animate-box">
 						<img src="images/mapla.jpg" class="img-responsive"   >
 						<div class="desc">
-							<h2>Mannoj Kumar</h2>
+							<h2>Dinesh Raja</h2>
 
 						</div>
 					</div>
@@ -122,14 +122,14 @@
 					<div class="couple bride text-center animate-box">
 						<img src="images/ponu.jpg" class="img-responsive"   >
 						<div class="desc">
-							<h2>Surya Lakshmi</h2>
+							<h2>Monisha</h2>
 
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<div id="qbootstrap-testimonials" class="qbootstrap-greetings img-responsive" data-section="greetings" data-stellar-background-ratio="0.5" style="background-image: url();">
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 				<div class="text-center containers">
-					<iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/3rPp1haO3kc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<img class="responsive-iframe" src="/images/poster.gif"></img>
 					<!-- <script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
 <script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
 <div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
@@ -169,18 +169,19 @@
 
 					</div>
 			</div>
-			<p align="center"> <a href='https://www.symptoma.es/'>VHALL.live</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=2b91e86e0615a67dbb2d9ea26b0497321beea927'></script>
-				<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/756522/t/0"></script></p>
+			<p align="center">
+				<a href='https://www.free-counters.org/'>VHALL.live</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=ba0d76f93cbd10ec0b749e3efeab54a7dcab9203'></script>
+				<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/760976/t/0"></script>	</p>
 
 		</div>
 
-	<div data-section="invitation">
+	<!-- <div data-section="invitation">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
 						<h2>You Are Invited</h2>
-						<img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation.jpg">
+						<img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation.gif">
 
 
 
@@ -188,7 +189,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<footer id="footer" role="contentinfo" style="background-color: #ffffff;">
 		<div class="container">
