--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="qbootstrap-groom-bride" data-section="groom-bride">
+	<div id="qbootstrap-groom-bride" data-section="groom-bride">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
@@ -129,7 +129,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 
 	<div id="qbootstrap-testimonials" class="qbootstrap-greetings img-responsive" data-section="greetings" data-stellar-background-ratio="0.5" style="background-image: url();">
