--- a/index.html
+++ b/index.html
@@ -144,15 +144,15 @@
 					</div>
 				</div>
 				<div class="text-center containers">
-					<img class="responsive-iframe" src="/images/poster.gif"></img>
-					<!-- <script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
+					<!-- <img class="responsive-iframe" src="/images/poster.gif"></img> -->
+					<script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
 <script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
 <div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
 <p><script type='text/javascript'>
 	jwplayer('MediaPlayerMiniPlayer').setup({
  sources: [
-		 {file: "https://65.0.131.108:80/hls/index.m3u8"},
-	 {file: "rtmp://65.0.131.108/hls"}
+		 {file: "https://13.126.27.123:80/hls/index.m3u8"},
+	 {file: "rtmp://13.126.27.123/hls"}
 		],
  rtmp: {
 	bufferlength: 3,
@@ -165,7 +165,7 @@
  'androidhls': true,
  'primary': 'html5'
  });
-</script> -->
+</script>
 
 					</div>
 			</div>
