--- a/index.html
+++ b/index.html
@@ -143,9 +143,8 @@
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
 				</div>
-
+				<!-- <div class="text-center containers"> -->
 					<!-- <img class="responsive-iframe" src="/images/poster.gif"></img> -->
-					<div class="text-center containers">
 					<script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
 <script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
 <div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
