--- a/index.html
+++ b/index.html
@@ -143,29 +143,36 @@
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
 				</div>
-				<!-- <div class="text-center containers"> -->
-					<!-- <img class="responsive-iframe" src="/images/poster.gif"></img> -->
-					<script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
-<script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
-<div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
-<p><script type='text/javascript'>
-	jwplayer('MediaPlayerMiniPlayer').setup({
- sources: [
-		 {file: "https://13.126.27.123:80/hls/index.m3u8"},
-	 {file: "rtmp://13.126.27.123/hls"}
-		],
- rtmp: {
-	bufferlength: 3,
- },
- 'autostart': 'false',
- 'width': '100%',
- 'aspectratio': '16:9',
- 'height': '270',
- 'fallback': false,
- 'androidhls': true,
- 'primary': 'html5'
- });
-</script>
+				<!-- <div class="text-center containers">
+					<img class="responsive-iframe" src="/images/poster.gif"></img> -->
+					<script type='text/javascript' class="responsive-iframe " src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
+					<script type="text/javascript ">
+							jwplayer.key = "Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";
+					</script>
+					</p>
+					<div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
+					<p>
+							<script type='text/javascript'>
+									jwplayer('MediaPlayerMiniPlayer').setup({
+											sources: [{
+													file: " https://15.207.87.180:80/hls/index.m3u8 "
+											}, {
+													file: "rtmp://15.207.87.180/hls "
+											}],
+											rtmp: {
+													bufferlength: 3,
+											},
+											'autostart': 'false',
+											'width': '100%',
+											'aspectratio': '16:9',
+											'height': '270',
+											'fallback': false,
+											'androidhls': true,
+											'primary': 'html5'
+									});
+							</script>
+
+
 
 					</div>
 			</div>
