--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 	<html class="no-js">
 	<head>
@@ -98,7 +97,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="qbootstrap-groom-bride" data-section="groom-bride">
+	<!-- <div id="qbootstrap-groom-bride" data-section="groom-bride">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
@@ -114,7 +113,6 @@
 						<img src="images/mapla.jpg" class="img-responsive"   >
 						<div class="desc">
 							<h2>Dinesh Raja</h2>
-
 						</div>
 					</div>
 				</div>
@@ -123,13 +121,12 @@
 						<img src="images/ponu.jpg" class="img-responsive"   >
 						<div class="desc">
 							<h2>Monisha</h2>
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 
 	<div id="qbootstrap-testimonials" class="qbootstrap-greetings img-responsive" data-section="greetings" data-stellar-background-ratio="0.5" style="background-image: url();">
@@ -143,36 +140,29 @@
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
 				</div>
-				<!-- <div class="text-center containers">
-					<img class="responsive-iframe" src="/images/poster.gif"></img> -->
-					<script type='text/javascript' class="responsive-iframe " src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
-					<script type="text/javascript ">
-							jwplayer.key = "Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";
-					</script>
-					</p>
-					<div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
-					<p>
-							<script type='text/javascript'>
-									jwplayer('MediaPlayerMiniPlayer').setup({
-											sources: [{
-													file: " https://15.207.87.180:80/hls/index.m3u8 "
-											}, {
-													file: "rtmp://15.207.87.180/hls "
-											}],
-											rtmp: {
-													bufferlength: 3,
-											},
-											'autostart': 'false',
-											'width': '100%',
-											'aspectratio': '16:9',
-											'height': '270',
-											'fallback': false,
-											'androidhls': true,
-											'primary': 'html5'
-									});
-							</script>
-
-
+				<div class="text-center containers">
+					<img class="responsive-iframe" src="/images/poster.gif"></img>
+					<!-- <script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
+<script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
+<div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
+<p><script type='text/javascript'>
+	jwplayer('MediaPlayerMiniPlayer').setup({
+ sources: [
+		 {file: "https://65.0.131.108:80/hls/index.m3u8"},
+	 {file: "rtmp://65.0.131.108/hls"}
+		],
+ rtmp: {
+	bufferlength: 3,
+ },
+ 'autostart': 'false',
+ 'width': '100%',
+ 'aspectratio': '16:9',
+ 'height': '270',
+ 'fallback': false,
+ 'androidhls': true,
+ 'primary': 'html5'
+ });
+</script> -->
 
 					</div>
 			</div>
@@ -189,9 +179,6 @@
 					<div class="col-md-12 text-center section-heading svg-sm colored">
 						<h2>You Are Invited</h2>
 						<img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation.gif">
-
-
-
 					</div>
 				</div>
 			</div>
