--- a/index.html
+++ b/index.html
@@ -27,6 +27,18 @@
 		  margin: 0 auto;
 		}
 		</script>
+		<style>.video_wrapper {
+			position: relative;
+			padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
+			}
+			iframe{
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			overflow: hidden;
+			}</style>
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="images/like.png">
 
@@ -97,7 +109,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- <div id="qbootstrap-groom-bride" data-section="groom-bride">
+	<div id="qbootstrap-groom-bride" data-section="groom-bride">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
@@ -126,7 +138,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 
 	<div id="qbootstrap-testimonials" class="qbootstrap-greetings img-responsive" data-section="greetings" data-stellar-background-ratio="0.5" style="background-image: url();">
@@ -140,29 +152,9 @@
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
 				</div>
-				<div class="text-center containers">
-					<img class="responsive-iframe" src="/images/poster.gif"></img>
-					<!-- <script type='text/javascript' class="responsive-iframe" src='../../../cdn.jwplayer.com/libraries/cKY5REJu.js'></script><br />
-<script type="text/javascript">jwplayer.key="Bc0mi3cZYJX9qF0RbAfEb3uQmbJYjO9LPpTZdOw5frI=";</script></p>
-<div id='MediaPlayerMiniPlayer'>Loading&#8230;</div>
-<p><script type='text/javascript'>
-	jwplayer('MediaPlayerMiniPlayer').setup({
- sources: [
-		 {file: "https://65.0.131.108:80/hls/index.m3u8"},
-	 {file: "rtmp://65.0.131.108/hls"}
-		],
- rtmp: {
-	bufferlength: 3,
- },
- 'autostart': 'false',
- 'width': '100%',
- 'aspectratio': '16:9',
- 'height': '270',
- 'fallback': false,
- 'androidhls': true,
- 'primary': 'html5'
- });
-</script> -->
+				<div class="video_wrapper">
+					<iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay">
+					</iframe></div>
 
 					</div>
 			</div>
