--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
 					</div>
 				</div>
 				<div class="video_wrapper">
-					<iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay">
-					</iframe></div>
+					<!-- <iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay"> -->
+					<!-- </iframe> -->
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/viMDGoVJVLc" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 
 					</div>
 			</div>
