--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
 				</div>
-				<div class="video_wrapper">
+				<div class="text-center containers">
 					<!-- <iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay"> -->
 					<!-- </iframe> -->
 
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/1w8PlYKDvVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+					<iframe  src="https://www.youtube.com/embed/1w8PlYKDvVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div>
 
 					</div>
