--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
 					<!-- <iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay"> -->
 					<!-- </iframe> -->
 					<div class="text-center containers">
-					<iframe  src="https://www.youtube.com/embed/1w8PlYKDvVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-						</div>
+					<iframe class="responsive-iframe" src="https://www.youtube.com/embed/1w8PlYKDvVs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 
 					</div>
 			</div>
