--- a/index.html
+++ b/index.html
@@ -140,12 +140,37 @@
 						padding-bottom: 0px;
 						margin-bottom: 0px;" class="">Watch Live</h2>
 					</div>
+
+				</div>
+
+				<div class="row animate-box">
+					<div class="col-md-12 section-heading text-center svg-sm colored">
+						<h2 style="
+						margin-top: 0px;
+						padding-bottom: 0px;
+						margin-bottom: 0px;" class="">Reception</h2>
+					</div>
+
 				</div>
 
 					<!-- <iframe frameborder="0" width="100%" height="100%" src="https://13.126.27.123:80" scrolling="no" allowfullscreen allow="autoplay"> -->
 					<!-- </iframe> -->
 					<div class="text-center containers">
 						<img class="responsive-iframe" src="images/poster.gif" >
+					</div>
+
+
+					<div class="row animate-box">
+						<div style="padding-top: 20px;" class="col-md-12 section-heading text-center svg-sm colored">
+							<h2 style="
+							margin-top: 0px;
+							padding-bottom: 0px;
+							margin-bottom: 0px;" class="">Wedding</h2>
+						</div>
+
+					</div>
+					<div class="text-center containers">
+						<img style="padding-top: 9px;" class="responsive-iframe" src="images/poster2.gif" >
 					</div>
 			</div>
 			<p align="center">
@@ -157,18 +182,21 @@
 
 		</div>
 
-	<!-- <div data-section="invitation">
+	<div data-section="invitation">
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="col-md-12 text-center section-heading svg-sm colored">
 						<h2>You Are Invited</h2>
-						<img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation.gif">
+						<img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation.jpg">
+					  <img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation2.jpg">
+            <img style="display:block; margin-left:auto; margin-right:auto; width:75%; "  src="images/invitation3.jpg">
+
 					</div>
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 
 	<footer id="footer" role="contentinfo" style="background-color: #ffffff;">
 		<div class="container">
