--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <h2 style="
 						margin-top: 0px;
 						padding-bottom: 0px;
-						margin-bottom: 0px;" class="">Reception</h2>
+						margin-bottom: 0px;" class="">Wedding</h2>
                 </div>
 
             </div>
@@ -153,7 +153,7 @@
 			</iframe>
             </div>
 
-            <div class="row animate-box">
+            <!--<div class="row animate-box">
                 <div class="col-md-12 section-heading text-center svg-sm colored">
                     <h2 style="
 						margin-top: 50px;
@@ -165,7 +165,7 @@
 
             <div class="text-center containers">
                 <img class="responsive-iframe" src="images/poster.gif">
-            </div>
+            </div>-->
             <!--
             <div class="row animate-box">
                 <div class="col-md-12 section-heading text-center svg-sm colored">
